[package]
name = "linkblocks"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
publish = false

[lib]
# Doctests are slow, so we don't use them
doctest = false

[dependencies]
anyhow = { version = "1.0.95" }
argon2 = "0.5.3"
askama = { version = "0.13.0", features = ["with-axum"] }
askama_axum = "0.6.0"
axum = { version = "0.8.1", features = ["macros", "tracing"] }
axum-server = { version = "0.7.1", features = ["tls-rustls-no-provider"] }
clap = { version = "4.5.27", features = ["derive", "env"] }
fake = { version = "3.1.0", default-features = false }
friendly-zoo = "1.1.0"
garde = { version = "0.22.0", default-features = false, features = [
    "derive",
    "url",
] }
include_dir = "0.7.4"
listenfd = "1.0.2"
mime_guess = "2.0.5"
rand = { version = "0.9.0", default-features = false, features = ["thread_rng"] }
serde = "1.0.217"
serde-aux = { version = "4.5.0", default-features = false }
serde_json = "1.0.138"
serde_qs = "0.13.0"
sqlx = { version = "0.8.3", features = [
    "runtime-tokio",
    "postgres",
    "migrate",
    "uuid",
    "time",
    "json",
], default-features = false }
thiserror = "2.0.11"
openidconnect = "4.0.0"
time = { version = "0.3.37", default-features = false, features = ["serde"] }
tokio = { version = "1.42.0", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.2", features = ["tracing", "trace"] }
tower-sessions = { version = "0.14" }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.12.1", features = ["v4", "serde"] }
visdom = "1.0.2"
tower-sessions-sqlx-store = { version = "0.15.0", features = ["postgres"] }
rustls = { version = "0.23.22", default-features = false, features = ["ring"] }

[patch.crates-io]
askama_axum = { git = "https://github.com/bikesheddev/askama.git", rev = "baa0aef8e3307f9a8575f8e36a59db221b18eaff" }
askama = { git = "https://github.com/rinja-rs/askama.git" }

[build-dependencies]
railwind = "0.1.5"
walkdir = "2"

[dev-dependencies]
http-body-util = "0.1.2"
serde_json = "1.0.138"
test-log = { version = "0.2.17", features = [
    "trace",
], default-features = false }
itertools = "0.14.0"
insta = "1.42.1"

[package.metadata.bin]
just = { version = "1.38.0", locked = true }
cargo-watch = { version = "8.5.3", locked = true }
systemfd = { version = "0.4.3", locked = true }
sqlx-cli = { version = "0.8.3", locked = true, bins = ["sqlx"] }
cargo-cyclonedx = { version = "0.5.7", locked = true }

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
