[package]
name = "linkblocks"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
publish = false

[lib]
# Doctests are slow, so we don't use them
doctest = false

[dependencies]
anyhow = { version = "1.0.99" }
argon2 = "0.5.3"
axum = { version = "0.8.4", features = ["macros", "tracing"] }
axum-server = { version = "0.7.2", features = ["tls-rustls-no-provider"] }
clap = { version = "4.5.46", features = ["derive", "env"] }
fake = { version = "4.4.0", default-features = false }
friendly-zoo = "1.1.0"
garde = { version = "0.22.0", default-features = false, features = [
    "derive",
    "url",
    "regex",
] }
include_dir = "0.7.4"
listenfd = "1.0.2"
mime_guess = "2.0.5"
rand = { version = "0.9.2", default-features = false }
serde = "1.0.219"
serde-aux = { version = "4.7.0", default-features = false }
serde_json = "1.0.143"
serde_qs = "0.15.0"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "postgres",
    "migrate",
    "uuid",
    "time",
    "json",
], default-features = false }
thiserror = "2.0.16"
openidconnect = "4.0.1"
time = { version = "0.3.42", default-features = false, features = ["serde"] }
tokio = { version = "1.47.1", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.6", features = ["tracing", "trace"] }
tower-sessions = { version = "0.14" }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
uuid = { version = "1.18.0", features = ["v4", "serde"] }
visdom = "1.0.3"
tower-sessions-sqlx-store = { version = "0.15.0", features = ["postgres"] }
rustls = { version = "0.23.31", default-features = false, features = ["ring"] }
htmf = { git = "https://github.com/raffomania/htmf", features = [
    "pretty-print",
] }
percent-encoding = "2.3.2"
activitypub_federation = { version = "0.6.5", default-features = false, features = [
    "axum",
] }
url = { version = "2.5.7", features = ["serde"] }
async-trait = "0.1.89"
chrono = "0.4.41"
redact = "0.1.11"

[patch.crates-io]
garde = { git = "https://github.com/raffomania/garde", branch = "url-length" }
activitypub_federation = { git = "https://github.com/raffomania/activitypub-federation-rust", branch = "update-axum" }

[build-dependencies]
railwind = "0.1.5"
walkdir = "2"
regex = "1.11.2"

[dev-dependencies]
http-body-util = "0.1.3"
serde_json = "1.0.143"
test-log = { version = "0.2.18", features = [
    "trace",
], default-features = false }
itertools = "0.14.0"
insta = "1.43.1"

[package.metadata.bin]
just = { version = "1.38.0", locked = true }
cargo-watch = { version = "8.5.3", locked = true }
systemfd = { version = "0.4.3", locked = true }
sqlx-cli = { version = "0.8.3", locked = true, bins = ["sqlx"] }
cargo-cyclonedx = { version = "0.5.7", locked = true }

[profile.dev.package]
insta.opt-level = 3
